# z-beam-generator

./: .env.example  .env.logging  .gitignore  .pre-commit-config.yaml  AGING_RESEARCH_IMPLEMENTATION_NOV25_2025.md  AI_DETECTION_ARCHITECTURE_PROPOSAL.md  AI_INTEGRATION_GUIDE.md  AI_RESEARCH_AUTOMATION_COMPLETE.md  AI_RESEARCH_FINAL_SUMMARY.md  ANALYSIS_THREE_CRITICAL_QUESTIONS.md  ANTI_HARDCODING.md  ANTI_HARDCODING_IMPLEMENTATION.md  API_ANTIHARDCODING_COMPLIANCE_REPORT.md  API_CACHING_STATUS.md  API_EFFICIENCY_ANALYSIS.md  API_RESPONSE_CACHING_COMPLETE.md  ARCHITECTURAL_REVOLUTION_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REFACTOR_PLAN.md  ASSOCIATION_AUDIT_REPORT_DEC20_2025.yaml  AUDIT_SYSTEM_QUICK_REFERENCE.md  AUTHENTICITY_INTENSITY_IMPLEMENTATION_COMPLETE.md  AUTHOR_VOICE_ANALYSIS_NOV22_2025.md  AUTHOR_VOICE_COVERAGE_VERIFICATION_NOV27_2025.md  AUTHOR_VOICE_TEXT_FIELDS_PROPOSAL.md  BATCH_CAPTION_TEST_NOV16_2025.md  BATCH_CAPTION_TEST_NOV16_2025_OLD.md  BATCH_CAPTION_TEST_REPORT.md  BATCH_REGENERATION_DEC14_2025.md  BIDIRECTIONAL_RELATIONSHIP_AUDIT_DEC21_2025.md  BISMUTH_HERO_IMAGE_TEST_NOV27_2025.md  BREADCRUMB_AND_FIELD_ORDER_FIXES_DEC18_2025.md  BREADCRUMB_FIX_SUMMARY_DEC18_2025.md  CACHING_QUICK_START.md  CAMELCASE_IMPLEMENTATION_COMPLETE_JAN5_2026.md  CAPTION_COMPONENT_EXAMPLES.md  CAPTION_FIXES_SUMMARY.md  CAPTION_FRONTMATTER_COMPATIBILITY_COMPLETE.md  CAPTION_SYSTEM_REFACTORING_PROPOSAL.md  CARD_RESTRUCTURE_MIGRATION_REPORT.md  (+921 more)
.cache/: category_properties.json
.github/: COPILOT_GENERATION_GUIDE.md  PROMPT_CREATION_ENFORCEMENT.md  PROTECTED_FILES.md  copilot-instructions.md
aggregate/: orchestrator.py
aggregates/: Applications.yaml  Compounds.yaml  DomainAssociations.yaml  IndustryApplications.yaml  MaterialApplications.yaml  Settings.yaml  contaminants.yaml
ai_detection/: __init__.py  service.py
api/: DIRECTIVES.md  README.md  __init__.py  cache_adapter.py  circuit_breaker.py  client.py  client_cache.py  client_factory.py  client_manager.py  config.py  consolidated_manager.py  deepseek.py  enhanced_client.py  env_loader.py  errors.py  key_manager.py  mock_client.py  persistent_cache.py  response_cache.py  response_handler.py
applications/: README.md  __init__.py  data.yaml  generator.py
archive/: CLEANUP_SUMMARY.md  README.md  run_new.py
article_types/: __init__.py  base_handler.py  subject_router.py
assembly/: README.md  __init__.py  assembler.py  component_adapter.py
audit_reports/: Steel_audit_report.txt
author/: authors.json
authors/: author_utils.py  authors.json  dr_evelyn_reed.mdx  mark_johnson.mdx  todd_dunning.mdx
backups/: Categories_backup_20250926_120558.yaml  Categories_backup_20250926_121247.yaml  Categories_backup_20250927_142643.yaml  Categories_before_missing_keys_enhancement.yaml  Materials_backup_before_batch_research_20250930_105617.yaml  Materials_backup_before_batch_research_20250930_111004.yaml  Materials_backup_before_batch_research_20250930_120315.yaml  Materials_backup_before_batch_research_20250930_141530.yaml  Materials_backup_before_batch_research_20250930_154000.yaml  Materials_backup_large.yaml  Materials_legacy_backup.yaml  materials_backup_20250927_142643.yaml  materials_before_completion_20250923_142025.yaml  materials_pre_cleanup_20250926_125635.yaml
cleanup/: README.md  __init__.py  cleanup_manager.py  cleanup_paths.py  cleanup_report.json  test_cleanup.py  test_cleanup_new.py  test_cleanup_old.py
cli/: __init__.py  api_config.py  argument_parser.py  cleanup_commands.py  commands.py  component_config.py  config_display.py
commands/: __init__.py  audit.py  common.py  deployment.py  generation.py  research.py  validation.py  validation_data.py
compliance/: audit_violations.py  show_config.py  validation_rules.py
components/: __init__.py  adapter.py  base.py  bullets.py  debug_loader.py  registry.py
config/: README.md  __init__.py  ai_detection.backup_20250903_181948.yaml  ai_detection.backup_20250903_182045.yaml  ai_detection.backup_20250903_182521.yaml  ai_detection.backup_20250903_182945.yaml  ai_detection.backup_20250903_183737.yaml  ai_detection.backup_20250903_184059.yaml  ai_detection.backup_20250903_200417.yaml  ai_detection.json  api.json  (+55 more)
(+11026 files in other folders)
